Refactor link imports to use utils and update restaurant link generation with slug

--- a/apps/web-astro/src/components/restaurants/FilterControls.astro
+++ b/apps/web-astro/src/components/restaurants/FilterControls.astro
@@ -1,7 +1,7 @@
 ---
 import { buttonVariants } from "@/components/ui/button";
 import { MapPin } from "lucide-vue-next";
-import { BASE_LINKS } from "@web-astro/clientScripts/links";
+import { BASE_LINKS } from "@web-astro/utils/links";
 
 interface Props {
 	type: string | undefined;
