--- a/apps/web-astro/src/layout/BaseLayout.astro
+++ b/apps/web-astro/src/layout/BaseLayout.astro
@@ -1,7 +1,7 @@
 ---
 import "../styles/global.css";
 import LayoutHelpers from "ui-shadcn-vue/src/ui-plus/LayoutHelpers.vue";
-import { BASE_LINKS } from "@web-astro/clientScripts/links";
+import { BASE_LINKS } from "@web-astro/utils/links";
 import { MenuIcon } from "lucide-vue-next";
 import Drawer from "../components/Drawer.vue";
 
@@ -76,7 +76,7 @@ const { title } = Astro.props;
 						websiteId:{Astro.locals.WEBSITE?.id}
 					</div>
 				</details>
-				<script src="../clientScripts/cacheFormat.ts"></script>
+				<script src="../utils/cacheFormat.ts"></script>
 				<LayoutHelpers client:load />
 				<!-- PAGE CONTENT END HERE -->
 			</div>
