--- a/apps/web-astro/src/pages/restaurant/[restaurantId]/[...slug].astro
+++ b/apps/web-astro/src/pages/restaurant/[restaurantId]/[...slug].astro
@@ -1,9 +1,34 @@
 ---
 import BaseLayout from "@web-astro/layout/BaseLayout.astro";
+import { getRestaurantData_Service } from "@db/services/restaurant.service";
+import Menu from "@web-astro/components/restaurant/menu/Menu.astro";
 const { slug, restaurantId } = Astro.params;
+
+if (!restaurantId) {
+	throw new Error("Restaurant ID is required");
+}
+
+const restaurant = await getRestaurantData_Service(restaurantId);
+if (!restaurant) {
+	throw new Error("Restaurant not found");
+}
+
+const getMenuRoot = () => {
+	if (!restaurant.menu?.menuRoot) {
+		throw new Error("Menu root not found");
+	}
+	return restaurant.menu.menuRoot;
+};
 ---
 
-<BaseLayout title={`-`}>
+<BaseLayout title={`${restaurant?.name} - ${slug}`}>
 	<h1>{slug}</h1>
 	<h2>{restaurantId}</h2>
+	<hr class="border-foreground my-4 border-t" />
+	<Menu menuRoot={restaurant.menu?.menuRoot} getMenuRoot={getMenuRoot} />
+	<hr class="border-foreground my-4 border-t" />
+	<details>
+		<summary>Restaurant</summary>
+		<pre>{JSON.stringify(restaurant, null, 2)}</pre>
+	</details>
 </BaseLayout>
