--- a/apps/web-astro/src/components/restaurant/menu/Menu.astro
+++ b/apps/web-astro/src/components/restaurant/menu/Menu.astro
@@ -25,7 +25,7 @@ const { menuRoot, getMenuRoot } = Astro.props;
 		itemBtns.forEach((itemBtn) => {
 			itemBtn.addEventListener("click", () => {
 				const itemId = itemBtn.dataset.itemId;
-				if (itemId) showItemModal(itemId, window.menuRoot);
+				if (itemId) showItemModal(itemId);
 				else toast.error("No item ID found");
 			});
 		});
