Add CartView component and update cart item functionality

--- a/apps/web-astro/src/pages/restaurant/[restaurantId]/[...slug].astro
+++ b/apps/web-astro/src/pages/restaurant/[restaurantId]/[...slug].astro
@@ -2,6 +2,8 @@
 import BaseLayout from "@web-astro/layout/BaseLayout.astro";
 import { getRestaurantData_Service } from "@db/services/restaurant.service";
 import Menu from "@web-astro/components/restaurant/menu/Menu.astro";
+import CartView from "@web-astro/components/restaurant/menu/item/CartView.vue";
+
 const { slug, restaurantId } = Astro.params;
 
 if (!restaurantId) {
@@ -24,9 +26,12 @@ const getMenuRoot = () => {
 <BaseLayout title={`${restaurant?.name} - ${slug}`}>
 	<h1>{slug}</h1>
 	<h2>{restaurantId}</h2>
-	<script define:vars={{ menuRoot: restaurant.menu?.menuRoot, restaurantId }}>
+	<script is:inline define:vars={{ menuRoot: restaurant.menu?.menuRoot, restaurantId }}>
 		window.menuRoot = menuRoot;
 		window.restaurantId = restaurantId;
 	</script>
 	<Menu menuRoot={restaurant.menu?.menuRoot} getMenuRoot={getMenuRoot} />
+	<div slot="sidebar">
+		<CartView client:only="vue" />
+	</div>
 </BaseLayout>
