--- a/apps/web-astro/src/layout/BaseLayout.astro
+++ b/apps/web-astro/src/layout/BaseLayout.astro
@@ -85,7 +85,7 @@ const { title } = Astro.props;
 				<label for="sidebar-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
 				<div class="bg-background text-foreground min-h-full w-80 overflow-y-auto p-2">
 					<Drawer client:visible />
-					{Array.from({ length: 100 }).map((_, i) => <div>{i}</div>)}
+					<slot name="sidebar" />
 				</div>
 			</div>
 		</div>
