--- a/apps/web-astro/src/components/restaurant/menu/ItemCard.astro
+++ b/apps/web-astro/src/components/restaurant/menu/ItemCard.astro
@@ -1,5 +1,5 @@
 ---
-import type { Item, MenuRoot } from "@lib/types/menuType";
+import type { Item } from "@lib/types/menuType";
 import { Card, CardContent, CardDescription, CardFooter, CardHeader, CardTitle } from "@/components/ui/card";
 import { Button } from "@/components/ui/button";
 import { Plus } from "lucide-vue-next";
