--- a/apps/web-astro/src/components/restaurants/Pagination.astro
+++ b/apps/web-astro/src/components/restaurants/Pagination.astro
@@ -38,7 +38,7 @@ const pageRange = getPageRange(currentPage, totalPages, maxVisiblePages);
 			)
 		}
 
-		{pageRange[0] > 1 && <span>.</span>}
+		{pageRange[0] && pageRange[0] > 1 && <span>.</span>}
 
 		{
 			pageRange.map((pageNum) => (
@@ -50,7 +50,7 @@ const pageRange = getPageRange(currentPage, totalPages, maxVisiblePages);
 			))
 		}
 
-		{pageRange[pageRange.length - 1] < totalPages && <span>.</span>}
+		{pageRange.length > 0 && pageRange[pageRange.length - 1]! < totalPages && <span>.</span>}
 
 		{
 			currentPage < totalPages && (
