Refactor restaurant menu components: remove Cart.Store and CartView; update ItemCard to display item description; enhance BaseLayout with a new slot for header content; add restaurantName to environment variables.

--- a/apps/web-astro/src/components/restaurant/menu/ItemCard.astro
+++ b/apps/web-astro/src/components/restaurant/menu/ItemCard.astro
@@ -20,6 +20,7 @@ const { item: currentItem } = Astro.props;
 				</h1>
 			</CardTitle>
 			<CardDescription>
+				${currentItem?.dsc}
 				${currentItem?.prc}
 			</CardDescription>
 		</CardHeader>
