--- a/apps/web-astro/src/layout/BaseLayout.astro
+++ b/apps/web-astro/src/layout/BaseLayout.astro
@@ -57,9 +57,15 @@ const { title } = Astro.props;
 				<div class="bg-card text-card-foreground relative sticky top-0 z-40 border shadow-sm">
 					<div class="flex items-center justify-between px-4 py-4">
 						<div class="flex items-center">
-							<label for="sidebar-drawer" class="drawer-button"><MenuIcon class="mr-4 cursor-pointer" /></label>
+							<label for="sidebar-drawer" class="drawer-button">
+								<MenuIcon class="mr-4 cursor-pointer" />
+							</label>
 							<a href={BASE_LINKS.HOME} class="mr-8 text-2xl font-bold">{Astro.locals.WEBSITE?.name}</a>
 						</div>
+						<slot name="header-right">
+							<!-- import { ShoppingCart } from "lucide-vue-next"; -->
+							<!-- <ShoppingCart /> -->
+						</slot>
 					</div>
 				</div>
 				<div class="container mx-auto p-2 lg:p-6">
