--- a/apps/web-astro/src/layout/BaseLayout.astro
+++ b/apps/web-astro/src/layout/BaseLayout.astro
@@ -51,45 +51,63 @@ const { title } = Astro.props;
 
 	<body>
 		<div class="drawer">
-			<input id="sidebar-drawer" type="checkbox" class="drawer-toggle" />
+			<input id="left-drawer" type="checkbox" class="drawer-toggle" />
 			<div class="drawer-content">
-				<!-- PAGE CONTENT START HERE -->
-				<!-- Header -->
-				<div class="bg-card text-card-foreground relative sticky top-0 z-40 border shadow-sm">
-					<div class="flex items-center justify-between px-4 py-4">
-						<div class="flex items-center">
-							<label for="sidebar-drawer" class="drawer-button">
-								<MenuIcon class="mr-4 cursor-pointer" />
-							</label>
-							<a href={BASE_LINKS.HOME} class="mr-8 text-2xl font-bold">{Astro.locals.WEBSITE?.name}</a>
+				<div class="drawer drawer-end">
+					<input id="right-drawer" type="checkbox" class="drawer-toggle" />
+					<div class="drawer-content">
+						<!-- PAGE CONTENT START HERE -->
+						<!-- Header -->
+						<div class="bg-card text-card-foreground relative sticky top-0 z-40 border shadow-sm">
+							<div class="flex items-center justify-between px-4 py-4">
+								<div class="flex items-center">
+									<label for="left-drawer" class="drawer-button">
+										<MenuIcon class="mr-4 cursor-pointer" />
+									</label>
+									<a href={BASE_LINKS.HOME} class="mr-8 text-2xl font-bold">{Astro.locals.WEBSITE?.name}</a>
+								</div>
+								<slot name="header-right">
+									<MultipleCartsView client:only="vue" />
+								</slot>
+								<!-- <label for="right-drawer" class="drawer-button btn btn-primary">
+									<MenuIcon class="mr-4 cursor-pointer" />
+								</label> -->
+							</div>
 						</div>
-						<slot name="header-right">
-							<MultipleCartsView client:only="vue" />
-						</slot>
+						<div class="container mx-auto p-2 lg:p-6">
+							<slot />
+						</div>
+						<details class="m-8 mx-auto w-fit text-xs">
+							<summary>⚙️</summary>
+							<div>
+								cache:
+								<span class="cache-date" data-cache-date={Date.now()}></span>
+								<br />
+								GIT: {globalThis?.SENTRY_RELEASE?.id}
+								<br />
+								websiteId:{Astro.locals.WEBSITE?.id}
+							</div>
+						</details>
+						<script src="../utils/cacheFormat.ts"></script>
+						<LayoutHelpers client:load />
+						<!-- PAGE CONTENT END HERE -->
+					</div>
+					<div class="drawer-side z-50">
+						<label for="right-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
+						<div class="bg-background text-foreground min-h-full w-96 overflow-y-auto">
+							<slot name="right-drawer">
+								right-drawer
+								<!-- loop 100 times -->
+								{Array.from({ length: 100 }, (_, i) => <div>{i}</div>)}
+							</slot>
+						</div>
 					</div>
 				</div>
-				<div class="container mx-auto p-2 lg:p-6">
-					<slot />
-				</div>
-				<details class="m-8 mx-auto w-fit text-xs">
-					<summary>⚙️</summary>
-					<div>
-						cache:
-						<span class="cache-date" data-cache-date={Date.now()}></span>
-						<br />
-						GIT: {globalThis?.SENTRY_RELEASE?.id}
-						<br />
-						websiteId:{Astro.locals.WEBSITE?.id}
-					</div>
-				</details>
-				<script src="../utils/cacheFormat.ts"></script>
-				<LayoutHelpers client:load />
-				<!-- PAGE CONTENT END HERE -->
 			</div>
 
 			<div class="drawer-side z-50">
-				<label for="sidebar-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
-				<div class="bg-background text-foreground min-h-full w-80 overflow-y-auto p-2">
+				<label for="left-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
+				<div class="bg-background text-foreground min-h-full w-80 overflow-y-auto">
 					<Drawer client:visible />
 					<slot name="sidebar">
 						<!-- loop 100 times -->
