--- a/apps/web-astro/src/pages/restaurant/[restaurantId]/[...slug].astro
+++ b/apps/web-astro/src/pages/restaurant/[restaurantId]/[...slug].astro
@@ -3,6 +3,7 @@ import BaseLayout from "@web-astro/layout/BaseLayout.astro";
 import { getRestaurantData_Service } from "@db/services/restaurant.service";
 import Menu from "@web-astro/components/restaurant/menu/Menu.astro";
 import SingleCartView from "@web-astro/components/cart/SingleCartView.vue";
+import CartView from "@web-astro/components/cart/CartView.vue";
 
 const { slug, restaurantId } = Astro.params;
 
@@ -36,5 +37,8 @@ restaurant.name;
 	<Menu menuRoot={restaurant.menu?.menuRoot} getMenuRoot={getMenuRoot} />
 	<div slot="header-right">
 		<SingleCartView client:only="vue" />
+	</div>
+	<div slot="right-drawer">
+		<CartView client:only="vue" />
 	</div>
 </BaseLayout>
