--- a/apps/web-astro/src/components/restaurant/menu/CategoryCard.astro
+++ b/apps/web-astro/src/components/restaurant/menu/CategoryCard.astro
@@ -9,10 +9,10 @@ interface Props {
 const { item, getMenuRoot } = Astro.props;
 ---
 
-<div class="category-container bg-background mb-12 rounded-lg border">
-	<div class="border-muted-foreground flex items-center justify-between border-b p-2">
+<div class="category-container bg-background mb-12">
+	<div class="flex items-center justify-between p-2">
 		<div class="flex-1 text-2xl font-bold">
-			<span class="h-10 cursor-text border-none text-2xl font-bold capitalize focus:ring-0">
+			<span class="h-10 cursor-text text-3xl font-bold capitalize">
 				{item?.lbl || "Category Name"}
 			</span>
 		</div>
