--- a/packages/ui-shadcn-vue/src/index.css
+++ b/packages/ui-shadcn-vue/src/index.css
@@ -167,3 +167,18 @@
 		transform: scale(1);
 	}
 }
+
+@layer utilities {
+
+	/* Chrome, Safari and Opera */
+	.no-scrollbar::-webkit-scrollbar {
+		display: none;
+	}
+
+	.no-scrollbar {
+		-ms-overflow-style: none;
+		/* IE and Edge */
+		scrollbar-width: none;
+		/* Firefox */
+	}
+}
