Refactor CartView and Menu components for improved layout and styling, enhance item display, and adjust padding for better UI consistency

--- a/apps/web-astro/src/components/restaurant/menu/Menu.astro
+++ b/apps/web-astro/src/components/restaurant/menu/Menu.astro
@@ -15,7 +15,7 @@ const { menuRoot, getMenuRoot } = Astro.props;
 		{
 			menuRoot?.children?.map((itemId) => (
 				<span
-					class="category-btn hover:bg-secondary mr-4 cursor-pointer whitespace-nowrap py-4 font-bold"
+					class="category-btn hover:bg-secondary mr-4 cursor-pointer whitespace-nowrap p-2 font-bold"
 					data-item-id={itemId}>
 					{menuRoot.allItems?.[itemId]?.lbl}
 				</span>
