--- a/apps/web-astro/src/layout/BaseLayout.astro
+++ b/apps/web-astro/src/layout/BaseLayout.astro
@@ -94,7 +94,8 @@ const { title } = Astro.props;
 					</div>
 					<div class="drawer-side z-50">
 						<label for="right-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
-						<div class="bg-background text-foreground max-w-10/12 min-h-full w-96 overflow-y-auto">
+						<div
+							class="bg-background text-foreground max-w-10/12 border-muted-foreground min-h-full w-96 overflow-y-auto border-l">
 							<slot name="right-drawer">
 								right-drawer
 								<!-- loop 100 times -->
@@ -107,7 +108,8 @@ const { title } = Astro.props;
 
 			<div class="drawer-side z-50">
 				<label for="left-drawer" aria-label="close sidebar" class="drawer-overlay"></label>
-				<div class="bg-background text-foreground max-w-10/12 min-h-full w-96 overflow-y-auto">
+				<div
+					class="bg-background text-foreground max-w-10/12 border-muted-foreground min-h-full w-96 overflow-y-auto border-r">
 					<Drawer client:visible />
 					<slot name="sidebar">
 						<!-- loop 100 times -->
