--- a/apps/web-astro/src/pages/index.astro
+++ b/apps/web-astro/src/pages/index.astro
@@ -3,10 +3,7 @@ import BaseLayout from "../layout/BaseLayout.astro";
 import { Card, CardContent, CardDescription, CardHeader, CardTitle } from "@/components/ui/card";
 import HeroAddress from "../components/HeroAddress.vue";
 import { BASE_LINKS } from "../utils/links";
-import {
-	countStoresForWebsite_Service,
-	getFirstStoreIdForWebsite_Service
-} from "@db/services/website.service";
+import { countStoresForWebsite_Service, getFirstStoreIdForWebsite_Service } from "@db/services/website.service";
 import { slugify } from "@lib/utils/slugify";
 
 const count = await countStoresForWebsite_Service(
@@ -29,7 +26,7 @@ if (count === 1) {
 			<CardHeader>
 				<CardTitle class="text-center text-3xl font-bold">Order near you</CardTitle>
 				<CardDescription class="text-muted-foreground text-center text-sm">
-					{count} businesses available
+					{count} stores available
 				</CardDescription>
 			</CardHeader>
 			<CardContent class="px-1 sm:px-6">
