--- a/apps/web-astro/src/pages/store/[storeId]/[...slug].astro
+++ b/apps/web-astro/src/pages/store/[storeId]/[...slug].astro
@@ -2,8 +2,8 @@
 import BaseLayout from "@web-astro/layout/BaseLayout.astro";
 import { getStoreData_Service } from "@db/services/store.service";
 import Menu from "@web-astro/components/store/menu/Menu.astro";
+import SingleCartBtn from "@web-astro/components/cart/SingleCartBtn.vue";
 import SingleCartView from "@web-astro/components/cart/SingleCartView.vue";
-import CartView from "@web-astro/components/cart/CartView.vue";
 
 const { slug, storeId } = Astro.params;
 
@@ -35,9 +35,16 @@ store.name;
 	</script>
 	<Menu menuRoot={store.menu?.menuRoot} getMenuRoot={getMenuRoot} />
 	<div slot="header-right">
-		<SingleCartView client:only="vue" />
+		<SingleCartBtn client:only="vue" />
+		<script>
+			import { openRightDrawer } from "@web-astro/utils/openRightDrawer";
+			// if url has ?cartId= then open the right drawer check with new URL object
+			if (new URL(window.location.href).searchParams.get("cartId")) {
+				openRightDrawer();
+			}
+		</script>
 	</div>
 	<div slot="right-drawer">
-		<CartView client:only="vue" />
+		<SingleCartView client:only="vue" />
 	</div>
 </BaseLayout>
