--- a/apps/web-astro/src/layout/BaseLayout.astro
+++ b/apps/web-astro/src/layout/BaseLayout.astro
@@ -4,8 +4,6 @@ import LayoutHelpers from "ui-shadcn-vue/src/ui-plus/LayoutHelpers.vue";
 import { BASE_LINKS } from "@web-astro/utils/links";
 import { MenuIcon } from "lucide-vue-next";
 import Drawer from "../components/Drawer.vue";
-import MultipleCartsBtn from "@web-astro/components/store-page/cart/MultipleCartsBtn.vue";
-import MultipleCartsView from "@web-astro/components/store-page/cart/MultipleCartsView.vue";
 
 interface Props {
 	title: string;
@@ -68,7 +66,7 @@ const { title } = Astro.props;
 									<a href={BASE_LINKS.HOME} class="mr-8 text-2xl font-bold">{Astro.locals.WEBSITE?.name}</a>
 								</div>
 								<slot name="header-right">
-									<MultipleCartsBtn client:only="vue" />
+									<!-- <MultipleCartsBtn client:only="vue" /> -->
 								</slot>
 								<!-- <label for="right-drawer" class="drawer-button btn btn-primary">
 									<MenuIcon class="mr-4 cursor-pointer" />
@@ -98,7 +96,7 @@ const { title } = Astro.props;
 						<div
 							class="bg-background text-foreground max-w-10/12 border-muted-foreground min-h-full w-96 overflow-y-auto border-l">
 							<slot name="right-drawer">
-								<MultipleCartsView client:only="vue" />
+								<!-- <MultipleCartsView client:only="vue" /> -->
 							</slot>
 						</div>
 					</div>
