Enhance ItemCard component by styling price display for better visibility

--- a/apps/web-astro/src/components/store-page/menu/ItemCard.astro
+++ b/apps/web-astro/src/components/store-page/menu/ItemCard.astro
@@ -21,7 +21,7 @@ const { item: currentItem } = Astro.props;
 			</CardTitle>
 			<CardDescription>
 				{currentItem?.dsc}
-				{currentItem?.prc}
+				<span class="text-foreground mt-2 block font-bold">{currentItem?.prc}</span>
 			</CardDescription>
 		</CardHeader>
 		<!-- <CardContent>
